--- a/BACKEND/src/main/resources/application.properties
+++ b/BACKEND/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=BACKEND
 server.port=2003
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/fooddb
+spring.datasource.url=jdbc:mysql://localhost:3306/playlistdb
 spring.datasource.username=root
 spring.datasource.password=root
 
